#947 Fix alignment of "Advanced search" link

--- a/app/webroot/css/pages/index.css
+++ b/app/webroot/css/pages/index.css
@@ -125,7 +125,7 @@
 }
 
 #new-search-bar .extra-links {
-    width: 820px;
+    width: 850px;
 }
 
 #new-search-bar .extra-links em {
